--- a/src/app/features/admin/admin.component.html
+++ b/src/app/features/admin/admin.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/features/admin/admin.component.html -->
 <div class="p-4 app-card">
-  <h2>Admin Area</h2>
+  <h2>Admin Area.</h2>
   <button pButton label="Admin Action" *hasRole="['admin']"></button>
 </div>
