--- a/src/app/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/components/topbar/topbar.component.html
@@ -1,3 +1,24 @@
-<p>
-  topbar works!
-</p>
+<header class="header flex align-items-center justify-content-between px-3 py-2  text-white">
+
+    <!-- Left Section -->
+    <div class="leftSectionHeader flex align-items-center">
+      <div class="leftSideLogo">
+        <img src="../../../assets/img/logo.png" alt="EXLume Logo-bold text-xl">
+      </div>
+      <div class="toggleArrowSideMenu ">
+        <span class=" text-white border-circle flex align-items-center justify-content-center pi pi-chevron-right"></span>
+      </div>
+      <div class="page-title">Prudential</div>
+    </div>
+
+    <!-- Right Section -->
+    <div class=" rightSectionHeader flex align-items-center gap-3">
+      <button pButton icon="pi pi-search" class="p-button-rounded p-button-text text-white"></button>
+      <button pButton icon="pi pi-cog" class="p-button-rounded p-button-text text-white"></button>
+      <button pButton icon="pi pi-sun" class="p-button-rounded p-button-text text-white"></button>
+      <div
+        class="avatar text-white border-circle flex align-items-center justify-content-center">
+        SK
+      </div>
+    </div>
+  </header>
