--- a/src/theme/_global-font.scss
+++ b/src/theme/_global-font.scss
@@ -22,3 +22,36 @@
   font-weight: normal;
   font-style: normal;
 }
+
+
+/* Font Face */
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url('../assets/font/Roboto/static/Roboto-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Roboto Italic';
+  src: url('../assets/font/Roboto/static/Roboto-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Roboto Bold';
+  src: url('../assets/font/Roboto/static/Roboto-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Roboto SemiBold';
+  src: url('../assets/font/Roboto/static/Roboto-SemiBold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
