--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,16 +1,31 @@
-<p-card header="Dashboard Overview" styleClass="mb-3">
-  <!-- <highcharts-chart
+<!-- <p-card header="Dashboard Overview" styleClass="mb-3"> -->
+<!-- <highcharts-chart
     [highcharts]="Highcharts"
     [options]="chartOptions"
     style="width:100%; height:400px; display:block;">
   </highcharts-chart> -->
-</p-card>
+<!-- </p-card> -->
 
-<p-card header="Status Grid">
+<!-- <p-card header="Status Grid">
   <ag-grid-angular
     class="ag-theme-alpine-dark"
     style="width:100%; height:300px;"
     [columnDefs]="colDefs"
     [rowData]="rowData">
   </ag-grid-angular>
-</p-card>
+</p-card> -->
+
+
+<div class="dashboard-container">
+  <!-- Top Bar -->
+  <app-topbar></app-topbar>
+
+  <!-- Breadcrumb -->
+  <app-breadcrumb></app-breadcrumb>
+
+  <!-- Sections -->
+  <!-- <app-product-list (productSelected)="onProductSelected($event)"></app-product-list> -->
+  <div class="dashboard-content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
