--- a/src/app/features/dashboard/dashboard.component.scss
+++ b/src/app/features/dashboard/dashboard.component.scss
@@ -1,11 +1,8 @@
-
-
 .dashboard-container {
   background-color: #f5f7fa;
   min-height: 100vh;
-
-
-
-
-
+  width: 100%; /* Adjust based on sidemenu width */
+  .custome-height {
+    height: calc(100vh - 64px); /* Adjust based on header height */
+  }
 }
