--- a/src/app/shared/components/breadcrumb/breadcrumb.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.html
@@ -1,14 +1,35 @@
-<!-- <div class="breadcrumb p-2 text-sm text-gray-600">
-  <span>Link 1 > Link 2</span>
-</div> -->
 
 
-<!-- breadcrumb.component.html -->
-<nav *ngIf="breadcrumbs.length" class="breadcrumb p-2 text-sm text-gray-600 bg-white border-b border-gray-300">
 
-  <ng-container *ngFor="let crumb of breadcrumbs; let last = last">
-    <a [routerLink]="crumb.url" *ngIf="!last">{{ crumb.label }}</a>
-    <span *ngIf="!last"> &gt; </span>
-    <span *ngIf="last" class="font-semibold">{{ crumb.label }}</span>
-  </ng-container>
+<nav *ngIf="breadcrumbs.length" class="breadcrumb p-2 text-sm text-gray-600">
+  <div class="flex justify-content-start flex-nowrap">
+    <ng-container *ngFor="let crumb of breadcrumbs; let first = first; let last = last">
+
+      <!-- First breadcrumb (Home) with icon, clickable if not current page -->
+      <a *ngIf="first && !last" [routerLink]="crumb.url" class="home-icon flex justify-content-center px-1">
+        <i class="pi pi-home p-2"></i>
+        <span>{{ crumb.label }}</span>
+      </a>
+
+      <!-- First breadcrumb (Home) but current page -->
+      <span *ngIf="first && last" class="home-icon active-page flex justify-content-center px-1">
+        <i class="pi pi-home p-2"></i>
+        <span>{{ crumb.label }}</span>
+      </span>
+
+      <!-- Other breadcrumbs, clickable if not last -->
+      <a *ngIf="!first && !last" [routerLink]="crumb.url" class="breadcrumb-link px-1">
+        {{ crumb.label }}
+      </a>
+
+      <!-- Current (active) breadcrumb, gray and not clickable -->
+      <span *ngIf="!first && last" class="breadcrumb-link active-page px-1">
+        {{ crumb.label }}
+      </span>
+
+      <!-- Separator -->
+      <span *ngIf="!last" class="py-2 px-1"> &gt; </span>
+
+    </ng-container>
+  </div>
 </nav>
