--- a/src/theme/_global-font.scss
+++ b/src/theme/_global-font.scss
@@ -17,6 +17,14 @@
 
 
 @font-face {
+  font-family: 'Lato Bold Italic';
+  src: url('../assets/font/Lato/Lato-BoldItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
   font-family: 'Lato Bold';
   src: url('../assets/font/Lato/Lato-Bold.ttf') format('truetype');
   font-weight: normal;
@@ -40,6 +48,13 @@
   font-style: normal;
 }
 
+
+@font-face {
+  font-family: 'Roboto Bold Italic';
+  src: url('../assets/font/Roboto/static/Roboto-BoldItalic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Roboto Bold';
